--- a/CssDemo.css
+++ b/CssDemo.css
@@ -25,3 +25,11 @@ h1{
 .alignRight{
     text-align: right;
 }
+
+.white{
+    color: white;
+}
+
+.blackBackround{
+    background-color: black;
+}
