--- a/Website/CssDemo.css
+++ b/Website/CssDemo.css
@@ -25,3 +25,11 @@ h1{
 .alignRight{
     text-align: right;
 }
+
+.white{
+    color: white;
+}
+
+.blackBackground{
+    background-color: black;
+}
